security almost done controller 1.1